# opencode-ctl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl
.beads/artifacts/opencode-ctl-zmg/: research.md
.research/: dirty-detection.md
.serena/: project.yml
docs/: opencode-api.md
src/opencode_ctl/: __init__.py  cli.py  client.py  runner.py  store.py
tests/: conftest.py  test_cli.py  test_client.py  test_runner.py  test_store.py
