[project]
name = "opencode-ctl"
version = "0.1.0"
description = "OpenCode session lifecycle manager"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Melodeiro"}
]
dependencies = [
    "httpx>=0.27.0",
    "filelock>=3.13.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
occtl = "opencode_ctl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_ctl"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
